--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@contentful/axios": "^0.18.0",
+    "assert": "^2.0.0",
+    "axios": "^0.19.0",
+    "contentful": "^7.10.0",
+    "contentful-import": "^7.6.0",
     "expo": "^33.0.0",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-web": "^0.11.4",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "url": "^0.11.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.1.1"
