--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-dom": "^16.8.6",
     "react-native": "https://github.com/expo/react-native/archive/sdk-33.0.0.tar.gz",
     "react-native-dropdown-menu": "^2.0.0",
+    "react-native-hr": "^1.1.4",
+    "react-native-hr-component": "^2.0.3",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "url": "^0.11.0"
