--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@contentful/axios": "^0.18.0",
+    "@contentful/rich-text-react-renderer": "^13.4.0",
     "assert": "^2.0.0",
     "axios": "^0.19.0",
     "contentful": "^7.10.0",
@@ -20,8 +21,11 @@
     "react-native-dropdown-menu": "^2.0.0",
     "react-native-hr": "^1.1.4",
     "react-native-hr-component": "^2.0.3",
+    "react-native-maps": "^0.26.1",
+    "react-native-popup-menu": "^0.15.6",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
+    "react-navigation-hooks": "^1.1.0",
     "url": "^0.11.0"
   },
   "devDependencies": {
